--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,7 @@
 SECRET=YOURKXP02-@@--20EY
 APP_ID=f8622efae7a8a099b2df4efd8d09108e
 
-
 POSTGRES_PASSWORD=benestudio
-POSTGRES_USER=benestudio
+DATABASE_USER=benestudio
 POSTGRES_DB=benestudio
-POSTGRES_HOST=localhodbst
+POSTGRES_HOST=db
