--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 {
-    "deploy_relative_path": "../backend",
+    "deploy_relative_path": "../",
     "views_path": "/",
     "public_path": "/",
     "static_files": "/static",
