--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "nodemon --exec babel-node backend/src/index.js",
-    "heroku-postbuild": "cd frontend && yarn && yarn run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "repository": {
     "type": "git",
