--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "nodemon --exec babel-node backend/src/index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
