--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "lokijs": "^1.5.6",
     "morgan": "^1.9.1",
+    "node": "^12.4.0",
     "pg": "^7.11.0",
     "winston": "2.4.0"
   },
