--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "nodemon --exec babel-node backend/src/index.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "lokijs": "^1.5.6",
     "morgan": "^1.9.1",
+    "node": "^12.4.0",
     "pg": "^7.11.0",
     "winston": "2.4.0"
   },
