--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lokijs": "^1.5.6",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
-    "winston": "2.4.0"
+    "winston": "2.4.0",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
